[gd_scene load_steps=7 format=2]

[ext_resource path="res://tilemaps/test_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://src/editor.gd" type="Script" id=2]
[ext_resource path="res://prefabs/tile_cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://tilemaps/test_tile_fence_slippy.tres" type="TileSet" id=4]
[ext_resource path="res://tilemaps/test_tile_fence.tres" type="TileSet" id=5]
[ext_resource path="res://tilemaps/test_tiles_slippy.tres" type="TileSet" id=6]

[node name="editor" type="Node2D"]
script = ExtResource( 2 )

[node name="tile_maps" type="Node2D" parent="."]

[node name="solid" type="TileMap" parent="tile_maps"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="fence" type="TileMap" parent="tile_maps"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="solid_slippy" type="TileMap" parent="tile_maps"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="fence_slippy" type="TileMap" parent="tile_maps"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="ents" type="Node2D" parent="."]

[node name="tile_cursor" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="panel" type="Control" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/panel"]
offset_right = 192.0
offset_bottom = 128.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="Button" parent="CanvasLayer/panel/VBoxContainer"]
offset_top = 42.0
offset_right = 192.0
offset_bottom = 62.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="Button" parent="CanvasLayer/panel/VBoxContainer"]
offset_top = 66.0
offset_right = 192.0
offset_bottom = 86.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hud" type="Control" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paint_description" type="Label" parent="CanvasLayer/hud"]
offset_right = 192.0
offset_bottom = 40.0
text = "Paint: Solid"
